--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNVvKakQ6pFUsYvkOVzA54t",
+      "authorship_tag": "ABX9TyOljDRGKAvN8I3MJ/Efu/4N",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,6 +60,67 @@
         "print(x,y,z,u)\n",
         "print(float_1,float_2)\n",
         "print(a,a.imag,a.real)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=int(input('Enter 1st no'))\n",
+        "b=int(input('Enter 2nd no'))\n",
+        "c=a+b\n",
+        "print('c=',c)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Nqw5tpEHxeYI",
+        "outputId": "4d0d0bf5-1bce-4e35-9e96-d34daea8c0cc"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter 1st no2\n",
+            "Enter 2nd no5\n",
+            "c= 7\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# using of / , // and ** in Arithmetic Operator\n",
+        "a=2\n",
+        "b=6\n",
+        "c=a/b\n",
+        "print(c)\n",
+        "d=a//b\n",
+        "print(d)\n",
+        "e=a**b\n",
+        "print(e)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jmLIzFtN0Ec1",
+        "outputId": "8cb87c64-5852-424a-9ba3-518d0b85242d"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.3333333333333333\n",
+            "0\n",
+            "64\n"
+          ]
+        }
       ]
     }
   ]
